<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.main.MainActivity">

        <TextView
            android:id="@+id/pending_eq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/pending_equation"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pending_eq"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1.5"
            android:nestedScrollingEnabled="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:text="@string/equation"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_equation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:digits="0123456789+-*/"
            android:autofillHints="1*1"
            android:hint="@string/enter_your_equation"
            android:inputType="text|number" />

        <LinearLayout
            android:id="@+id/operation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt_mul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt_div"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/div"
                android:textAllCaps="false" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/delay"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_sec"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:inputType="number"
            android:hint="@string/enter_delay_in_sec" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/submit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="0.5"
            android:text="@string/result"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:layout_weight="1.5"
            android:nestedScrollingEnabled="true" />

        <TextView
            android:id="@+id/tv_coordinates"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/gps" />
    </LinearLayout>
</ScrollView>
